--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "ngx-spinner": "^6.1.2",
+    "ngx-toastr": "^9.1.1",
     "popper.js": "^1.14.5",
     "rxjs": "~6.3.3",
     "sweetalert2": "^7.29.1",
